<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">


    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/diente"
        android:layout_gravity="center_horizontal"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crear_cuents"
        android:layout_gravity="center_horizontal"
        android:textSize="30dp"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:drawableLeft="@drawable/icon_email"
            android:inputType="textEmailAddress"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp"/>



        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass"
            android:drawableLeft="@drawable/icon_pass"
            android:inputType="textPassword"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp"/>


        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_crear"
            android:background="@drawable/gradiente_button"
            android:textColor="@color/white"
            android:textSize="17dp"
            android:fontFamily="sans-serif-black"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp"/>

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_irlogin"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:fontFamily="sans-serif-black"
            android:textSize="16dp"
            android:textColor="@color/black"/>

    </LinearLayout>

</LinearLayout>