<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.schedule_appointment"
    android:id="@+id/fragment_container">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agendar_cita"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif-black"
        android:textSize="25dp"
        android:textColor="@color/black"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>


        <LinearLayout
            android:id="@+id/llBuscar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/txtBuscar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_doc"
                android:textAlignment="center"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>


            <Button
                android:id="@+id/btnBuscar"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_buscar"
                android:drawableRight="@drawable/icon_b"
                android:layout_gravity="center"
                android:background="@drawable/gradiente_button"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:fontFamily="sans-serif-black"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <TextView
                android:id="@+id/tvPaciente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20dp"
                android:background="@drawable/border_textview"
                android:drawableTop="@drawable/icon_user"
                />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha"
            android:textColor="@color/black"
            android:textSize="17dp"/>
        <EditText
            android:id="@+id/txtDateAppointment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="dd/mm/aaaa"
            android:focusable="false"
            android:clickable="true"
            android:inputType="date"
            android:maxLines="1"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hora"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:textSize="17dp"/>
         <Spinner
           android:id="@+id/spHours"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
             android:textSize="17dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/motivo"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:textSize="17dp"/>
        <Spinner
            android:id="@+id/spReason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <Button
            android:id="@+id/btnSaveAppo"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_guardar"
            android:background="@drawable/gradiente_save"
            android:drawableRight="@drawable/icon_save"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:fontFamily="sans-serif-black"
            />
    </LinearLayout>

</FrameLayout>